// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlighter renders jsx highlighted text 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    import React from "react";
import uniquePropHOC from "./lib/unique-prop-hoc";

class Expire extends React.Component {
    constructor(props) {
        super(props);
        this.state = { component: props.children }
    }
    componentDidMount() {
        setTimeout(() =&gt; {
            this.setState({
                component: null
            });
        }, this.props.time || this.props.seconds * 1000);
    }
    render() {
        return this.state.component;
    }
}
  </code>
</pre>
`;

exports[`SyntaxHighlighter should just render text if syntax is not registered 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    print('hello')
  </code>
</pre>
`;

exports[`When the code split is loaded - SyntaxHighlighter renders python highlighted text after async loading python 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    
             
    <span
      className="token"
      style={
        Object {
          "color": "slategray",
        }
      }
    >
      # Import the modules
    </span>
    

    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      import
    </span>
     sys

    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      import
    </span>
     random

ans 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      True
    </span>
    


    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      while
    </span>
     ans
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
    question 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      raw_input
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "Ask the magic 8 ball a question: (press enter to quit) "
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    
    
    answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =
    </span>
     random
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    randint
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      1
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ,
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      8
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      if
    </span>
     question 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      ""
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        sys
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    exit
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      1
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "It is certain"
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      2
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "Outlook good"
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      3
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "You may rely on it"
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      4
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "Ask again later"
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      5
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "Concentrate and ask again"
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      6
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "Reply hazy, try again"
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      7
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "My reply is no"
    </span>
    
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      elif
    </span>
     answers 
    <span
      className="token"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ==
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#905",
        }
      }
    >
      8
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
    
        
    <span
      className="token"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "My sources say no"
    </span>
    
             
  </code>
</pre>
`;
